--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -103,7 +103,44 @@
         </div>
       </div>
       <!-- 模板页 -->
-      <div class="page templet"></div>
+      <div class="page templet">
+        <div class="templet-tree">
+          <img src="images/templet-tree.png" />
+        </div>
+        <div class="templet-lantern">
+          <img src="images/templet-lantern.png" />
+        </div>
+        <div class="templet-lantern2">
+          <img src="images/templet-lantern2.png" />
+        </div>
+        <div class="templet-pine">
+          <img src="images/templet-pine.png" />
+        </div>
+        <div class="templet-card">
+          <img src="images/templet-card.png" />
+        </div>
+        <div class="templet-lantern3">
+          <img src="images/templet-lantern3.png" />
+        </div>
+        <div class="templet-cloud">
+          <img src="images/templet-cloud.png" />
+        </div>
+        <div class="arrow-left">
+          <img src="images/arrow-left.png" />
+        </div>
+        <div class="arrow-right">
+          <img src="images/arrow-right.png" />
+        </div>
+        <div class="upload-area">
+          <div class="upload-box">
+            <img src="images/templet-bg2.png" class="templetBg" />
+          </div>
+          <img src="images/templet2.png" class="templetImg" />
+          <input type="file" class="fileUpload" id="upload" accept="image/*">
+        </div>
+      </div>
+      <!-- 分享页 -->
+      <div class="page share"></div>
     </div>
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/preloadjs-0.6.2.min.js"></script>
