--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -122,7 +122,7 @@
         <div class="templet-pine">
           <img src="images/templet-pine.png" />
         </div>
-        <div class="templet-card">
+        <div class="templet-card" id="templet-card">
           <img src="images/templet-card.png" />
         </div>
         <div class="templet-lantern3">
@@ -142,9 +142,9 @@
                 <div class="swiper-wrapper">
                   <div class="upload-area swiper-slide">
                     <div class="upload-box upload-box1">
-                      <img src="images/templet-bg2.png" class="templetBg" />
+                      <img src="images/templet-bg1.png" class="templetBg" />
                     </div>
-                    <img src="images/templet2.png" class="templetImg" />
+                    <img src="images/templet1.png" class="templetImg" />
                     <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                   </div>
                   <div class="upload-area swiper-slide">
@@ -156,9 +156,9 @@
                   </div>
                   <div class="upload-area swiper-slide">
                     <div class="upload-box upload-box3">
-                      <img src="images/templet-bg2.png" class="templetBg" />
+                      <img src="images/templet-bg3.png" class="templetBg" />
                     </div>
-                    <img src="images/templet2.png" class="templetImg" />
+                    <img src="images/templet3.png" class="templetImg" />
                     <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                   </div>
                 </div>
