--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -30,11 +30,11 @@
   <body>
     <div class="container slide-container" id="slide-container">
       <!-- 加载页 -->
-      <div class="page loading slide-page">
+      <div class="page loading">
         <div class="loadingTitle">
           <div class="loading-circle">
             <img src="images/loading-circle" />
-            <span>0</span>
+            <span id="progress">0</span>
           </div>
           <img src="images/loading1.png" class="loading1" />
         </div>  
@@ -142,23 +142,51 @@
                 <div class="swiper-wrapper">
                   <div class="upload-area swiper-slide">
                     <div class="upload-box upload-box1">
-                      <img src="images/templet-bg1.png" class="templetBg" />
+                      <img src="images/templet-upload1.png" class="templetBg" />
                     </div>
                     <img src="images/templet1.png" class="templetImg" />
+                    <div class="word-area word-area1">
+                      <div class="p1">1986年5月童星<span>陈雪</span></div>
+                      <div class="p2">登上头条，为白衣天使送上祝福！</div>
+                      <div class="p3">他表示：</div>
+                      <div class="p4">感谢<span>沈阳市第三医院</span>的白衣天使在<span>1986年5月</span>接生如此<span>才貌双全</span>的我。</div>
+                    </div>
                     <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                   </div>
                   <div class="upload-area swiper-slide">
                     <div class="upload-box upload-box2">
-                      <img src="images/templet-bg2.png" class="templetBg" />
+                      <img src="images/templet-upload2.png" class="templetBg" />
                     </div>
                     <img src="images/templet2.png" class="templetImg" />
+                    <div class="word-area word-area2">
+                      <div class="vertical">
+                        <div class="p1 word">感谢</div>
+                        <div class="p2 word"><span>湖北省鄂州第一医院</span></div>
+                        <div class="p3 word">的白衣天使</div>
+                        <div class="p4 word">感谢你们在<span>1986年6月</span></div>
+                        <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
+                        <div class="p6 word">祝你们新春快乐！</div>
+                      </div>
+                      <div class="p7">陈迪</div>
+                    </div>
                     <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                   </div>
                   <div class="upload-area swiper-slide">
                     <div class="upload-box upload-box3">
-                      <img src="images/templet-bg3.png" class="templetBg" />
+                      <img src="images/templet-upload3.png" class="templetBg" />
                     </div>
                     <img src="images/templet3.png" class="templetImg" />
+                    <div class="word-area word-area3">
+                      <div class="vertical">
+                        <div class="p1 word">感谢</div>
+                        <div class="p2 word"><span>湖北省鄂州第一医院</span></div>
+                        <div class="p3 word">的白衣天使</div>
+                        <div class="p4 word">感谢你们在<span>1986年6月</span></div>
+                        <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
+                        <div class="p6 word">祝你们新春快乐！</div>
+                      </div>
+                      <div class="p7">陈迪</div>
+                    </div>
                     <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                   </div>
                 </div>
@@ -192,12 +220,10 @@
         <div class="share-mushroom">
           <img src="images/share-mushroom.png" />
         </div>
-        <div class="share-btn">
+        <div class="share-btn" id="share-btn">
           <img src="images/share-btn.png" />
         </div>
-        <div class="share-btn">
-          <img src="images/share-btn.png" />
-        </div><div class="share-save">
+        <div class="share-save">
           <img src="images/share-save.png" />
         </div>
       </div>
