--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -59,7 +59,7 @@
         <div class="brief-cloud3">
           <img src="images/brief-cloud3.png" />
         </div>
-        <div class="brief-card">
+        <div class="brief-card next-btn">
           <img src="images/brief-card.png" />
         </div>
       </div>
@@ -104,7 +104,7 @@
         <div class="message-cloud2">
           <img src="images/message-cloud2.png" />
         </div>
-        <div class="message-upload">
+        <div class="message-upload next-btn">
           <img src="images/message-upload.png" />
         </div>
       </div>
@@ -146,10 +146,14 @@
                     </div>
                     <img src="images/templet1.png" class="templetImg" />
                     <div class="word-area word-area1">
-                      <div class="p1">1986年5月童星<span>陈雪</span></div>
+                      <div class="p1"><span class="t-year"></span>年<span class="t-month"></span>月童星<span class="t-name"></span></div>
                       <div class="p2">登上头条，为白衣天使送上祝福！</div>
                       <div class="p3">他表示：</div>
-                      <div class="p4">感谢<span>沈阳市第三医院</span>的白衣天使在<span>1986年5月</span>接生如此<span>才貌双全</span>的我。</div>
+                      <div class="p4">感谢<span class="t-addr"></span>的白衣天使在<span><span class="t-year"></span>年<span class="t-month"></span>月</span>接生如此<span>才貌双全</span>的我。</div>
+                      <div class="qrcodes">
+                        <p>长按送祝福</p>
+                        <img src="images/qrcode.png" />
+                      </div>
                     </div>
                     <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                   </div>
@@ -161,13 +165,17 @@
                     <div class="word-area word-area2">
                       <div class="vertical">
                         <div class="p1 word">感谢</div>
-                        <div class="p2 word"><span>湖北省鄂州第一医院</span></div>
+                        <div class="p2 word"><span class="t-addr"></span></div>
                         <div class="p3 word">的白衣天使</div>
-                        <div class="p4 word">感谢你们在<span>1986年6月</span></div>
+                        <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
                         <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
                         <div class="p6 word">祝你们新春快乐！</div>
                       </div>
-                      <div class="p7">陈迪</div>
+                      <div class="p7"><span class="t-name"></span></div>
+                      <div class="qrcodes">
+                        <img src="images/qrcode.png" />
+                        <p>长按送祝福</p>
+                      </div>
                     </div>
                     <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                   </div>
@@ -179,13 +187,17 @@
                     <div class="word-area word-area3">
                       <div class="vertical">
                         <div class="p1 word">感谢</div>
-                        <div class="p2 word"><span>湖北省鄂州第一医院</span></div>
+                        <div class="p2 word"><span class="t-addr"></span></div>
                         <div class="p3 word">的白衣天使</div>
-                        <div class="p4 word">感谢你们在<span>1986年6月</span></div>
+                        <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
                         <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
                         <div class="p6 word">祝你们新春快乐！</div>
                       </div>
-                      <div class="p7">陈迪</div>
+                      <div class="p7"><span class="t-name"></span></div>
+                      <div class="qrcodes">
+                        <img src="images/qrcode.png" />
+                        <p>长按送祝福</p>
+                      </div>
                     </div>
                     <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                   </div>
@@ -193,6 +205,8 @@
             </div>
             <input type="file" class="fileUpload" id="upload" accept="image/*">
         </div>
+        <!-- 生成二维码 -->
+        <div class="qrcode"></div>
       </div>
       <!-- 分享页 -->
       <div class="page share slide-page">
@@ -237,6 +251,12 @@
         </div>
         <div class="cover-crane">
           <img src="images/cover-crane.png" />
+        </div>
+      </div>
+      <!-- 信息提示页 -->
+      <div class="page messageCover">
+        <div class="warn">
+          <img src="images/warn.png" />
         </div>
       </div>
     </div>
