--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -30,10 +30,11 @@
   <body>
     <div class="container slide-container" id="slide-container">
       <!-- 加载页 -->
-      <div class="page loading">
+      <div class="slide-page page loading">
+        <div class="loadingBg"></div>
         <div class="loadingTitle">
           <div class="loading-circle">
-            <img src="images/loading-circle" />
+            <img src="images/loading-circle.png" />
             <span id="progress">0</span>
           </div>
           <img src="images/loading1.png" class="loading1" />
