--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -138,73 +138,75 @@
         <div class="arrow-right swiper-arrow-next">
           <img src="images/arrow-right.png" />
         </div>
-        <div class="uploadBox">
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="upload-area swiper-slide">
-                    <div class="upload-box upload-box1">
-                      <img src="images/templet-upload1.png" class="templetBg" />
-                    </div>
-                    <img src="images/templet1.png" class="templetImg" />
-                    <div class="word-area word-area1">
-                      <div class="p1"><span class="t-year"></span>年<span class="t-month"></span>月童星<span class="t-name"></span></div>
-                      <div class="p2">登上头条，为白衣天使送上祝福！</div>
-                      <div class="p3">他表示：</div>
-                      <div class="p4">感谢<span class="t-addr"></span>的白衣天使在<span><span class="t-year"></span>年<span class="t-month"></span>月</span>接生如此<span>才貌双全</span>的我。</div>
-                      <div class="qrcodes">
-                        <p>长按送祝福</p>
-                        <img src="images/qrcode.png" />
+        <div class="slideWrapper">
+          <div class="uploadBox">
+              <div class="swiper-container">
+                  <div class="swiper-wrapper">
+                    <div class="upload-area swiper-slide">
+                      <div class="upload-box upload-box1">
+                        <img src="images/templet-upload1.png" class="templetBg" />
                       </div>
+                      <img src="images/templet1.png" class="templetImg" />
+                      <div class="word-area word-area1">
+                        <div class="p1"><span class="t-year"></span>年<span class="t-month"></span>月童星<span class="t-name"></span></div>
+                        <div class="p2">登上头条，为白衣天使送上祝福！</div>
+                        <div class="p3">他表示：</div>
+                        <div class="p4">感谢<span class="t-addr"></span>的白衣天使在<span><span class="t-year"></span>年<span class="t-month"></span>月</span>接生如此<span>才貌双全</span>的我。</div>
+                        <div class="qrcodes">
+                          <p>长按送祝福</p>
+                          <img src="images/qrcode.png" />
+                        </div>
+                      </div>
+                      <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
                     </div>
-                    <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
+                    <div class="upload-area swiper-slide">
+                      <div class="upload-box upload-box2">
+                        <img src="images/templet-upload2.png" class="templetBg" />
+                      </div>
+                      <img src="images/templet2.png" class="templetImg" />
+                      <div class="word-area word-area2">
+                        <div class="vertical">
+                          <div class="p1 word">感谢</div>
+                          <div class="p2 word"><span class="t-addr"></span></div>
+                          <div class="p3 word">的白衣天使</div>
+                          <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
+                          <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
+                          <div class="p6 word">祝你们新春快乐！</div>
+                        </div>
+                        <div class="p7"><span class="t-name"></span></div>
+                        <div class="qrcodes">
+                          <img src="images/qrcode.png" />
+                          <p>长按送祝福</p>
+                        </div>
+                      </div>
+                      <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
+                    </div>
+                    <div class="upload-area swiper-slide">
+                      <div class="upload-box upload-box3">
+                        <img src="images/templet-upload3.png" class="templetBg" />
+                      </div>
+                      <img src="images/templet3.png" class="templetImg" />
+                      <div class="word-area word-area3">
+                        <div class="vertical">
+                          <div class="p1 word">感谢</div>
+                          <div class="p2 word"><span class="t-addr"></span></div>
+                          <div class="p3 word">的白衣天使</div>
+                          <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
+                          <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
+                          <div class="p6 word">祝你们新春快乐！</div>
+                        </div>
+                        <div class="p7"><span class="t-name"></span></div>
+                        <div class="qrcodes">
+                          <img src="images/qrcode.png" />
+                          <p>长按送祝福</p>
+                        </div>
+                      </div>
+                      <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
+                    </div>
                   </div>
-                  <div class="upload-area swiper-slide">
-                    <div class="upload-box upload-box2">
-                      <img src="images/templet-upload2.png" class="templetBg" />
-                    </div>
-                    <img src="images/templet2.png" class="templetImg" />
-                    <div class="word-area word-area2">
-                      <div class="vertical">
-                        <div class="p1 word">感谢</div>
-                        <div class="p2 word"><span class="t-addr"></span></div>
-                        <div class="p3 word">的白衣天使</div>
-                        <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
-                        <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
-                        <div class="p6 word">祝你们新春快乐！</div>
-                      </div>
-                      <div class="p7"><span class="t-name"></span></div>
-                      <div class="qrcodes">
-                        <img src="images/qrcode.png" />
-                        <p>长按送祝福</p>
-                      </div>
-                    </div>
-                    <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
-                  </div>
-                  <div class="upload-area swiper-slide">
-                    <div class="upload-box upload-box3">
-                      <img src="images/templet-upload3.png" class="templetBg" />
-                    </div>
-                    <img src="images/templet3.png" class="templetImg" />
-                    <div class="word-area word-area3">
-                      <div class="vertical">
-                        <div class="p1 word">感谢</div>
-                        <div class="p2 word"><span class="t-addr"></span></div>
-                        <div class="p3 word">的白衣天使</div>
-                        <div class="p4 word">感谢你们在<span><span class="t-year"></span>年<span class="t-month"></span>月</span></div>
-                        <div class="p5 word">接生如此<span>萌萌哒</span>的我</div>
-                        <div class="p6 word">祝你们新春快乐！</div>
-                      </div>
-                      <div class="p7"><span class="t-name"></span></div>
-                      <div class="qrcodes">
-                        <img src="images/qrcode.png" />
-                        <p>长按送祝福</p>
-                      </div>
-                    </div>
-                    <!-- <input type="file" class="fileUpload" id="upload" accept="image/*"> -->
-                  </div>
-                </div>
-            </div>
-            <input type="file" class="fileUpload" id="upload" accept="image/*">
+              </div>
+              <input type="file" class="fileUpload" id="upload" accept="image/*">
+          </div>
         </div>
         <!-- 生成二维码 -->
         <div class="qrcode"></div>
