--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -29,6 +29,9 @@
 </head>
   <body>
     <div class="container slide-container" id="slide-container">
+      <div class="glbYun1">
+        <img src="./images/brief-cloud1.png" alt="">
+      </div>
       <!-- 加载页 -->
       <div class="slide-page page loading">
         <div class="loadingBg"></div>
@@ -39,15 +42,24 @@
           </div>
           <img src="images/loading1.png" class="loading1" />
         </div>  
+        <!-- <div class="brief-cloud12">
+            <img src="images/brief-cloud11.png" />
+        </div> -->
+        <div class="yun1">
+          <img src="./images/page1yun2.png" alt="">
+        </div>
+        <div class="yun2">
+          <img src="./images/page1yun.png" alt="">
+        </div>
       </div>
       <!-- 简介页 -->
       <div class="page brief slide-page">
          <div class="brief-dog">
            <img src="images/brief-dog.png" />
          </div>
-         <div class="brief-cloud1">
-          <img src="images/brief-cloud1.png" />
-        </div>
+         <!-- <div class="brief-cloud1">
+          <img src="images/brief-cloud12.png" />
+        </div> -->
         <div class="brief-cloud2">
           <img src="images/brief-cloud2.png" />
         </div>
@@ -57,9 +69,9 @@
         <div class="brief-word1">
           <img src="images/brief-word1.png" />
         </div>
-        <div class="brief-cloud3">
+        <!-- <div class="brief-cloud3">
           <img src="images/brief-cloud3.png" />
-        </div>
+        </div> -->
         <div class="brief-card next-btn">
           <img src="images/brief-card.png" />
         </div>
@@ -69,31 +81,33 @@
         <div class="message-tree">
           <img src="images/message-tree.png" />
         </div>
-        <div class="message-crane">
+        <!-- <div class="message-crane">
           <img src="images/message-crane.png" />
-        </div>
+        </div> -->
         <div class="message-lantern">
           <img src="images/message-lantern.png" />
         </div>
-        <div class="message-word1">
-          <img src="images/message-word1.png" />
-        </div>
-        <div class="message-box">
-          <img src="images/message-box.png" />
-          <div class="date">
-            <input type="text" class="year" />
-            <span>年</span>
-            <input type="text" class="month" />
-            <span>月</span>
+        <div class="infoBoxZ">
+          <div class="message-word1">
+            <img src="images/message-word1.png" />
           </div>
-        </div>
-        <div class="message-word2">
-          <img src="images/message-word2.png" />
-        </div>
-        <div class="message-box2">
-          <img src="images/message-box.png" />
-          <div class="addr">
-            <input type="text" class="addr-s" />
+          <div class="message-box">
+            <img src="images/message-box.png" />
+            <div class="date">
+              <input type="text" class="year" />
+              <span>年</span>
+              <input type="text" class="month" />
+              <span>月</span>
+            </div>
+          </div>
+          <div class="message-word2">
+            <img src="images/message-word2.png" />
+          </div>
+          <div class="message-box2">
+            <img src="images/message-box.png" />
+            <div class="addr">
+              <input type="text" class="addr-s" />
+            </div>
           </div>
         </div>
         <div class="message-cloud1">
