图片上传修改，loadingye加动画

--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -32,9 +32,15 @@
       <div class="glbYun1">
         <img src="./images/brief-cloud1.png" alt="">
       </div>
+      <!-- <div class="xianhe2">
+        <img src="./images/xianhe2.png" alt="">
+      </div> -->
       <!-- 加载页 -->
       <div class="slide-page page loading">
         <div class="loadingBg"></div>
+        <div class="xingxing1 page1Ani pulse animated infinite">
+          <img src="./images/xingxing1.png" alt="">
+        </div>
         <div class="loadingTitle">
           <div class="loading-circle">
             <img src="images/loading-circle.png" />
@@ -48,7 +54,7 @@
         <div class="yun1">
           <img src="./images/page1yun2.png" alt="">
         </div>
-        <div class="yun2">
+        <div class="yun2 page1Ani shake animated">
           <img src="./images/page1yun.png" alt="">
         </div>
       </div>
@@ -57,9 +63,9 @@
          <div class="brief-dog">
            <img src="images/brief-dog.png" />
          </div>
-         <!-- <div class="brief-cloud1">
+         <div class="brief-cloud1">
           <img src="images/brief-cloud12.png" />
-        </div> -->
+        </div>
         <div class="brief-cloud2">
           <img src="images/brief-cloud2.png" />
         </div>
