--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -38,7 +38,7 @@
       <!-- 加载页 -->
       <div class="slide-page page loading">
         <div class="loadingBg"></div>
-        <div class="xingxing1 page1Ani pulse animated infinite">
+        <div class="xingxing1 pageAnimate pulse animated infinite">
           <img src="./images/xingxing1.png" alt="">
         </div>
         <div class="loadingTitle">
@@ -51,10 +51,10 @@
         <!-- <div class="brief-cloud12">
             <img src="images/brief-cloud11.png" />
         </div> -->
-        <div class="yun1">
+        <div class="yun1 pageAnimate shake animated">
           <img src="./images/page1yun2.png" alt="">
         </div>
-        <div class="yun2 page1Ani shake animated">
+        <div class="yun2 pageAnimate shake animated">
           <img src="./images/page1yun.png" alt="">
         </div>
       </div>
