--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -58,6 +58,12 @@
           <img src="./images/page1yun.png" alt="">
         </div>
       </div>
+      <!-- 飞鹤过夜 -->
+      <div class="slide-page page guodu">
+          <div class="message-tree">
+              <img src="images/message-tree.png" />
+            </div>
+      </div>
       <!-- 简介页 -->
       <div class="page brief slide-page">
          <div class="brief-dog">
@@ -85,7 +91,7 @@
       <!-- 填写讯页 -->
       <div class="page message slide-page">
         <div class="message-tree">
-          <img src="images/message-tree.png" />
+          <!-- <img src="images/message-tree.png" /> -->
         </div>
         <!-- <div class="message-crane">
           <img src="images/message-crane.png" />
