过度页动画

--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -29,12 +29,6 @@
 </head>
   <body>
     <div class="container slide-container" id="slide-container">
-      <div class="glbYun1">
-        <img src="./images/brief-cloud1.png" alt="">
-      </div>
-      <!-- <div class="xianhe2">
-        <img src="./images/xianhe2.png" alt="">
-      </div> -->
       <!-- 加载页 -->
       <div class="slide-page page loading">
         <div class="loadingBg"></div>
@@ -58,20 +52,29 @@
           <img src="./images/page1yun.png" alt="">
         </div>
       </div>
-      <!-- 飞鹤过夜 -->
+      <!-- 过度页 -->
       <div class="slide-page page guodu">
-          <div class="message-tree">
-              <img src="images/message-tree.png" />
-            </div>
+        <div class="yun1 pageAnimate slideInUp animated">
+          <img src="./images/guoduYun1.png" alt="">
+        </div>
+        <div class="yun2 pageAnimate slideInUp animated">
+          <img src="./images/guoduYun2.png" alt="">
+        </div>
+        <div class="xianhe pageAnimate zoomInRight animated">
+          <img src="./images/xianhe1.png" alt="">
+        </div>
       </div>
       <!-- 简介页 -->
       <div class="page brief slide-page">
+          <div class="yun2 pageAnimate shake animated">
+            <img src="./images/page1yun.png" alt="">
+          </div>
          <div class="brief-dog">
            <img src="images/brief-dog.png" />
          </div>
-         <div class="brief-cloud1">
+         <!-- <div class="brief-cloud1">
           <img src="images/brief-cloud12.png" />
-        </div>
+        </div> -->
         <div class="brief-cloud2">
           <img src="images/brief-cloud2.png" />
         </div>
