--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -23,11 +23,12 @@
         }
       }; 
       window.addEventListener('orientationchange' in window ? 'orientationchange' : 'resize', setRem, false);
-      setRem();
+      setRem();   
     })(window, document);
   </script>
 </head>
   <body>
+    
     <div class="container slide-container" id="slide-container">
       <!-- 加载页 -->
       <div class="slide-page page loading">
@@ -89,6 +90,27 @@
         </div> -->
         <div class="brief-card next-btn">
           <img src="images/brief-card.png" />
+        </div>
+      </div>
+      <!-- 过度2 -->
+      <div class="page guodu2 slide-page">
+        <div class="yun1">
+          <img src="./images/brief-cloud3.png" alt="">
+        </div>
+        <div class="gou1">
+          <img src="./images/gou.png" alt="">
+        </div>
+        <div class="brief-cloud1">
+          <img src="./images/brief-cloud1.png" alt="">
+        </div>
+        <div class="message-lantern">
+          <img src="./images/message-lantern.png" alt="">
+        </div>
+        <div class="message-cloud2">
+          <img src="./images/message-cloud2.png" alt="">
+        </div>
+        <div class="xianhe2">
+          <img src="./images/xianhe2.png" alt="">
         </div>
       </div>
       <!-- 填写讯页 -->
