--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -52,16 +52,22 @@
         <div class="yun2 pageAnimate shake animated">
           <img src="./images/page1yun.png" alt="">
         </div>
+        <div class="xianhe3">
+            <img src="images/xianhe3.png" />
+        </div>
       </div>
       <!-- 过度页 -->
       <div class="slide-page page guodu">
+        <div class="xianhe3">
+            <img src="images/xianhe3.png" />
+        </div>
         <div class="yun1 pageAnimate slideInUp animated">
           <img src="./images/guoduYun1.png" alt="">
         </div>
         <div class="yun2 pageAnimate slideInUp animated">
           <img src="./images/guoduYun2.png" alt="">
         </div>
-        <div class="xianhe pageAnimate zoomInRight animated">
+        <div class="xianhe">
           <img src="./images/xianhe1.png" alt="">
         </div>
       </div>
@@ -91,12 +97,18 @@
         <div class="brief-card next-btn">
           <img src="images/brief-card.png" />
         </div>
+        <div class="cloud1">
+          <img src="images/cloud1.png" />
+        </div>
       </div>
       <!-- 过度2 -->
       <div class="page guodu2 slide-page">
-        <div class="yun1">
-          <img src="./images/brief-cloud3.png" alt="">
+        <div class="cloud1">
+          <img src="images/cloud1.png" />
         </div>
+        <!-- <div class="yun1">
+          <img src="./images/brief-cloud3.png" alt="">
+        </div> -->
         <div class="gou1">
           <img src="./images/gou.png" alt="">
         </div>
@@ -115,6 +127,9 @@
       </div>
       <!-- 填写讯页 -->
       <div class="page message slide-page">
+        <div class="xianhe2">
+          <img src="./images/xianhe2.png" alt="">
+        </div>
         <div class="message-tree">
           <!-- <img src="images/message-tree.png" /> -->
         </div>
@@ -342,8 +357,8 @@
     <script src="js/transformjs.js"></script>
     <script src="js/html2canvas.js"></script>
     <!--微信分享-->
-    <script src="http://h5.zegelo.com/Themes/js/WeiXin.js"></script>
-    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+    <!-- <script src="http://h5.zegelo.com/Themes/js/WeiXin.js"></script> -->
+    <!-- <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script> -->
     <script src="js/index.js"></script>
   </body>
 </html>
