--- a/src/feihe/index.html
+++ b/src/feihe/index.html
@@ -46,10 +46,10 @@
         <!-- <div class="brief-cloud12">
             <img src="images/brief-cloud11.png" />
         </div> -->
-        <div class="yun1 pageAnimate shake animated">
+        <div class="yun1">
           <img src="./images/page1yun2.png" alt="">
         </div>
-        <div class="yun2 pageAnimate shake animated">
+        <div class="yun2">
           <img src="./images/page1yun.png" alt="">
         </div>
         <div class="xianhe3">
@@ -61,10 +61,10 @@
         <div class="xianhe3">
             <img src="images/xianhe3.png" />
         </div>
-        <div class="yun1 pageAnimate slideInUp animated">
+        <div class="yun1">
           <img src="./images/guoduYun1.png" alt="">
         </div>
-        <div class="yun2 pageAnimate slideInUp animated">
+        <div class="yun2">
           <img src="./images/guoduYun2.png" alt="">
         </div>
         <div class="xianhe">
